# better-roadmap

./: .dockerignore  .envrc  .flake8  Dockerfile  Makefile  README.org  app.py  config.py  feature.py  free_slots.py  parameters.py  pyproject.toml  scheduler.py  span.py  test_app.py  test_feature.py  test_free_slots.py  test_scheduler.py  test_span.py  utils.py
assets/: custom-script.js  header.css  typography.css
better_roadmap/: __main__.py  app.py  feature.py  features.py  layout.py  parameters.py  scheduler.py  wsgi.py
better_roadmap/layout/: __init__.py  _tab_actuals.py  _tab_chart.py  _tab_config_type.py  _tab_elapsed.py  _tab_features.py  _tab_parameters.py
better_roadmap/models/: actuals.py  charts.py  config_type.py  elapsed.py  features.py  parameters.py  scheduler.py  span.py
better_roadmap/services/: roadmap_chart.py  scheduler.py  sprint_to_date.py
data/: default_actuals.yml  default_elapsed.yml  default_parameters.yml  features.yml
tests/: test_app.py  test_feature.py  test_scheduler.py  test_span.py  test_sprint_to_date.py
